优化 	deleted:    application/.htaccess 	modified:   application/common.php 	renamed:    application/config.php -> application/config/dev/config.php 	renamed:    application/database.php -> application/config/dev/database.php 	new file:   application/config/product/config.php 	new file:   application/config/product/database.php 	modified:   application/index/view/index/home.html 	modified:   public/favicon.ico 	modified:   think

--- a/application/index/view/index/home.html
+++ b/application/index/view/index/home.html
@@ -1,16 +1,15 @@
 <html class="screen-desktop-wide device-desktop" lang="zh-cn"><head>
   <meta charset="utf-8">
+  <title>专业的法人信息检索平台-法人堂</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>法人堂</title>
-<link rel="stylesheet" href="//cdn.bootcss.com/zui/1.6.0/css/zui.min.css">
+  <meta name="keywords" content="法人堂，法人，企业法人，工商信息查询，企业联系方式" />
+    <meta name="description" content="法人堂是一个专业的企业法人信息检索平台，致力于提供简单、可靠、真实的法人信息检索查询服务。" />
+    <link rel="alternate" media="only screen and(max-width: 640px)" href="//m.gongchang.com" >
+  <link rel="stylesheet" href="//cdn.bootcss.com/zui/1.6.0/css/zui.min.css">
   <link href="http://zui.sexy/dist/css/zui.min.css" rel="stylesheet">
   <link href="http://zui.sexy/docs/css/doc.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
-  <!-- ZUI 标准版压缩后的 CSS 文件 -->
-
   <style id="themeStyle"></style>
-
   <link rel="shortcut icon" href="http://zui.sexy/docs/favicon.ico" type="image/x-icon">
   <link rel="icon" href="http://zui.sexy/docs/favicon.ico" type="image/x-icon">
 
@@ -46,24 +45,24 @@
     <div class="container">
       <div id="heading">
         <h1>法人堂</h1>
-        <p>致力于提供简单、可靠、真实的法人信息检索查询服务。</p>
+        <p>致力于提供简单、可靠、真实的法人信息检索服务。</p>
         <div id="download">
           <a class="btn btn-primary btn-lg format-pkg" href="#">商务合作 <i class="icon icon-download-alt"></i></a>
           <a href="#" class="btn btn-white btn-lg">快速上手 <i class="icon icon-hand-right"></i></a>
-          <p><small>asfa</small></p>
+          <p><small>简单、真实</small></p>
         </div>
-        <p><span data-toggle="tooltip" data-html="true" title="" >dfsgsdfgdsf</span</p>
+        <p><span data-toggle="tooltip" data-html="true" >专业、可靠</span</p>
       </div>
       <div id="search">
         <div id="searchForm">
-          <input class="form-control input-lg" id="searchInput" placeholder="按钮, control, icon-star..." type="text">
+          <input class="form-control input-lg" id="searchInput" placeholder="企业名称、法人名称、联系方式" type="text">
           <i class="icon icon-search"></i>
           <button id="searchHelpBtn" type="button" class="btn btn-link"><i class="icon icon-question"></i></button>
         </div>
       </div>
     </div>
     <div class="text-center" id="ad">
-      <a id="mzui" class="hidden" href="http://zui.sexy/m/" target="_blank"><i class="icon icon-diamond"></i> 简单、可靠、真实的法人信息检索查询服务。</a>
+      <a id="mzui" class="hidden" href="/"><i class="icon icon-diamond"></i> 简单、可靠、真实的法人信息检索服务。</a>
     </div>
   </div>
 </header>
@@ -139,12 +138,12 @@
           <div class="chapter-body" id="sections-learn">
             <div class="card-heading">
               <i class="icon text-icon">Y</i>
-              <h5><a class="name" href="#learn/newly">宇晨控股</a></h5>
+              <h5><a class="name" href="http://www.yuchenkonggu.com/" target="_blank">易成交</a></h5>
             </div>
 
             <div class="card-heading" title="">
               <i class="icon text-icon">J</i>
-              <h5><a class="name" href="#learn/oschina">即刻理财</a></h5>
+              <h5><a class="name" href="http://www.jklcai.com/" target="_blank">即刻理财</a></h5>
             </div>
         </div>
       </div>
@@ -228,7 +227,7 @@
         <div class="row">
             <div class="col-sm-12">
                 <span>Copyright © <a class="name" href="http://www.farentang.com">法人堂</a></span> |
-                <span><a class="name" href="http://www.miibeian.gov.cn/" target="_blank">豫ICP备16007903号-1</a></span>
+                <span><a class="name" href="http://www.miibeian.gov.cn/" target="_blank">豫ICP备16007903号-2</a></span>
             </div>
         </div>
     </div>
