--- a/application/index/view/index/home.html
+++ b/application/index/view/index/home.html
@@ -1,23 +1,16 @@
-<html class="screen-desktop-wide device-desktop" lang="zh-cn"><head>
+<!DOCTYPE html>
+<html class="screen-desktop-wide device-desktop" lang="zh-cn">
+<head>
   <meta charset="utf-8">
   <title>专业的法人信息检索平台-法人堂</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="keywords" content="法人堂，法人，企业法人，工商信息查询，企业联系方式" />
-    <meta name="description" content="法人堂是一个专业的企业法人信息检索平台，致力于提供简单、可靠、真实的法人信息检索查询服务。" />
-    <link rel="alternate" media="only screen and(max-width: 640px)" href="//m.gongchang.com" >
-  <link rel="stylesheet" href="//cdn.bootcss.com/zui/1.6.0/css/zui.min.css">
-  <link href="http://zui.sexy/dist/css/zui.min.css" rel="stylesheet">
+  <meta name="description" content="法人堂是一个专业的企业法人信息检索平台，致力于提供简单、可靠、真实的法人信息检索查询服务。" />
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/zui/1.7.0/css/zui.min.css">
   <link href="http://zui.sexy/docs/css/doc.min.css" rel="stylesheet">
-  <style id="themeStyle"></style>
-  <link rel="shortcut icon" href="http://zui.sexy/docs/favicon.ico" type="image/x-icon">
-  <link rel="icon" href="http://zui.sexy/docs/favicon.ico" type="image/x-icon">
-
-  <!--[if lt IE 9]>
-    <script src="dist/lib/ieonly/html5shiv.js"></script>
-    <script src="dist/lib/ieonly/respond.js"></script>
-    <script src="dist/lib/ieonly/excanvas.js"></script>
-  <![endif]-->
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body class="ad-xuanxuan" cz-shortcut-listen="true">
 <header id="header" class="bg-primary">
@@ -34,7 +27,7 @@
       </div>
       <nav class="collapse navbar-collapse zui-navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li id="navDownloadLink"><a title="" class="format-pkg" href="#"><i class="icon icon-download-alt"></i><span> 会员中心</span></a></li>
+          <li id="navDownloadLink"><a title="" class="format-pkg" href="#"><i class="icon icon-user"></i><span> 会员中心</span></a></li>
           <li><a title="" href="#" target="_blank"><i class="icon icon-comments-alt"></i><span> 登录</span></a></li>
           <li><a href="#" target="_blank"><i class="icon icon-github"></i><span> 注册</span></a></li>
         </ul>
@@ -66,67 +59,52 @@
     </div>
   </div>
 </header>
-
-<!-- 新开子页面 -->
-
 <!-- 内容目录 -->
 <div id="grid" class="scrollbar-hover">
   <div class="container">
     <div class="row">
-
       <div class="list list-condensed">
       <header>
         <h3><i class="icon-list-ul"></i> 最新动态 <small>更新 123 条</small></h3>
       </header>
       <div class="items items-hover">
+        <?php foreach ($data as $k => $v) {?>
         <div class="item">
           <div class="item-heading">
-            <div class="pull-right"><span class="text-muted">2013-11-11 16:14:37</span> &nbsp; <a href="#" class="text-muted"><i class="icon-comments"></i> 243</a></div>
-            <h4><a href="###">HTML5 发展历史</a></h4>
+            <div class="pull-right"><a href="#"><i class="icon-chat"></i> 5 </a> &nbsp;&nbsp;<a href="#"><i class="icon-eye-open"></i> 8547 </a></div>
+            <h4>
+              <a href="###">河南斯沃琪网络科技有限公司</a>
+              <span class="label label-success">存续（在营、开业、在册）</span>
+            </h4>
           </div>
-          <div class="item-content">
-            <div class="text">HTML 5草案的前身名为Web Applications 1.0，是在2004年由WHATWG提出。2008年1月22日，第一份正式草案发布。WHATWG表示该规范是目前仍在进行的工作，仍须多年的努力。[8]目前Mozilla Firefox、Google Chrome、Opera、Safari（版本4以上）、Internet Explorer（版本9以上）已支持HTML5技术。</div>
-          </div>
-        </div>
-        <div class="item">
-          <div class="item-heading">
-            <div class="pull-right label label-success">维基</div>
-            <h4><a href="###">HTML5 发展历史</a></h4>
-          </div>
-          <div class="item-content">
-            <div class="text">HTML 5草案的前身名为Web Applications 1.0，是在2004年由WHATWG提出。2008年1月22日，第一份正式草案发布。WHATWG表示该规范是目前仍在进行的工作，仍须多年的努力。[8]目前Mozilla Firefox、Google Chrome、Opera、Safari（版本4以上）、Internet Explorer（版本9以上）已支持HTML5技术。</div>
+          <div class="item-content" style="padding-top: 5px;">
+            <i class="icon-user"></i> &nbsp; <span class="text">杨志宇</span>
+            &nbsp; &nbsp; &nbsp; &nbsp;
+            <i class="icon-yen"></i> &nbsp; <span class="text">200.000000万 </span>
+            &nbsp; &nbsp; &nbsp; &nbsp;
+            <?php if(!empty($aaa)){ ?>
+            <i class="icon-time"></i> &nbsp; <span class="text">成立3年</span>
+            &nbsp; &nbsp; &nbsp; &nbsp;
+            <?php } ?>
+            <i class="icon-phone-sign"></i> &nbsp; <span class="text">0371-66616992</span>
+            &nbsp; &nbsp; &nbsp; &nbsp;
+            <i class="icon-ie"></i> &nbsp; <a href="">http://www.xxx.com</a>
+            &nbsp; &nbsp; &nbsp; &nbsp;
+            <i class="icon-envelope"></i> &nbsp; <span class="text">yangzhiyu1991@sina.com</span>
+            <div class="text" style="padding-top: 5px;">
+              <i class="icon-map-marker"></i> &nbsp; <span class="text">郑州市管城区紫荆山路56号14层1404号</span>
+            </div>
+            <div class="text" style="padding-top: 5px;">
+              <i class="icon-list-alt"></i> &nbsp;
+              <span class="text">计算机软件开发；计算机技术咨询；企业管理咨询；财务信息咨询。</span>
+            </div>
           </div>
           <div class="item-footer">
-            <a href="#" class="text-muted"><i class="icon-comments"></i> 243</a> &nbsp; <span class="text-muted">2013-11-11 16:14:37</span>
+            <a href="#" class="text-muted"><i class="icon-comments"></i> 0</a> &nbsp; <span class="text-muted">2014年07月30日</span>
           </div>
         </div>
-        <div class="item">
-          <div class="item-heading">
-            <div class="pull-right label label-success">维基</div>
-            <h4><a href="###">HTML5 发展历史</a></h4>
-          </div>
-          <div class="item-content">
-            <div class="media pull-right"><img src="docs/img/img2.jpg" alt=""></div>
-            <div class="text">HTML 5草案的前身名为Web Applications 1.0，是在2004年由WHATWG提出。2008年1月22日，第一份正式草案发布。WHATWG表示该规范是目前仍在进行的工作，仍须多年的努力。[8]目前Mozilla Firefox、Google Chrome、Opera、Safari（版本4以上）、Internet Explorer（版本9以上）已支持HTML5技术。</div>
-          </div>
-          <div class="item-footer">
-            <a href="#" class="text-muted"><i class="icon-comments"></i> 243</a> &nbsp; <span class="text-muted">2013-11-11 16:14:37</span>
-          </div>
-        </div>
-        <div class="item">
-          <div class="item-heading">
-            <div class="pull-right"><a href="###"><i class="icon-pencil"></i> 编辑</a> &nbsp;<a href="#"><i class="icon-remove"></i> 删除</a></div>
-            <h4><span class="label label-success">维基</span> <a href="###">HTML5 发展历史</a></h4>
-          </div>
-          <div class="item-content">
-            <div class="text">HTML 5草案的前身名为Web Applications 1.0，是在2004年由WHATWG提出。2008年1月22日，第一份正式草案发布。WHATWG表示该规范是目前仍在进行的工作，仍须多年的努力。[8]目前Mozilla Firefox、Google Chrome、Opera、Safari（版本4以上）、Internet Explorer（版本9以上）已支持HTML5技术。</div>
-          </div>
-          <div class="item-footer">
-            <a href="#" class="text-muted"><i class="icon-comments"></i> 243</a> &nbsp; <span class="text-muted">2013-11-11 16:14:37</span>
-          </div>
-        </div>
+        <?php } ?>
       </div>
-
     </div>
     </div>
     <div class="row">
@@ -172,14 +150,14 @@
           <div class="chapter-heading fade scale show in">
             <h4><i class="icon"></i> <span class="name">数据来源</span></h4>
           </div>
-           <div class="card-heading" title="">
-              <i class="icon text-icon">M</i>
-              <h5><a class="name" href="#promotion/mzui">test</a></h5>
+           <div class="card-heading">
+              <i class="icon text-icon">G</i>
+              <h5><a class="name" href="http://www.gsxt.gov.cn/index.html">国家企业信用信息公示系统</a></h5>
             </div>
 
-            <div class="card-heading" title="">
-              <i class="icon text-icon">喧</i>
-              <h5><a class="name" href="#promotion/xuanxuan">test</a></h5>
+            <div class="card-heading">
+              <i class="icon text-icon">X</i>
+              <h5><a class="name" href="http://www.creditchina.gov.cn/">信用中国</a></h5>
             </div>
         </div>
       </div>
@@ -232,77 +210,11 @@
         </div>
     </div>
 </div>
-<!-- 一些html模板代码片段 -->
-<div class="template">
-  <div class="card section fade scale slide-in-up-100 slide-in-right-50">
-    <div class="card-heading">
-      <i class="icon"></i>
-      <h5><a class="name" href="###"></a></h5>
-    </div>
-    <div class="card-content">
-      <ul class="topics">
-      </ul>
-    </div>
-  </div>
-  <div class="card-content section-preview icon-preview" id="iconPreviewTemplate">
-    <div class="icons"><i class="icon icon-10x"></i><i class="icon icon-5x"></i><i class="icon icon-2x"></i><i class="icon"></i></div>
-    <h3><small><i class="icon "></i></small> <span class="name color-accent"></span>  <small>Unicode: \<span class="unicode">f3dd</span><span class="alias"> · 别名：<span class="alias-values"></span></span></small></h3>
-    <pre class="copyable"><code><span class="tag">&lt;i</span><span class="pln"> </span><span class="atn">class</span><span class="pun">=</span><span class="atv">"icon <em class="name"></em>"</span><span class="tag">&gt;&lt;/i&gt;</span></code></pre>
-  </div>
-  <button id="copyCodeBtn" data-html="true" data-animation="false" data-toggle="tooltip" data-title="复制代码" type="button" class="btn btn-copy-code" data-tip-id="copyCodeTip" data-container="body" data-original-title="" title=""><i class="icon icon-copy"></i></button>
-</div>
 
-<!-- 视图切换对话框 -->
-<div class="modal fade" id="changeViewModal">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">关闭</span></button>
-        <h4 class="modal-title">你想用哪种布局展示页面？</h4>
-      </div>
-      <div class="modal-body">
-        <div class="view-options">
-          <a class="view-option view-option-single">
-            <div class="view-shape">
-              <div class="s-1"></div>
-            </div>
-            <div class="title strong">单页面</div>
-            <p class="text-muted">页面在页面中间显示，并隐藏目录。</p>
-          </a>
-          <a class="view-option view-option-double">
-            <div class="view-shape">
-              <div class="s-1"></div>
-            </div>
-            <div class="title strong">双栏</div>
-            <p class="text-muted">目录在左侧显示，页面在右侧显示，更好的利用宽屏空间。</p>
-          </a>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
 
-<!-- jQuery (ZUI中的Javascript组件依赖于jQuery) -->
-<script async="" src="//www.google-analytics.com/analytics.js"></script><script src="http://zui.sexy/assets/jquery.js"></script>
-
-<!-- ZUI Javascript组件 -->
-<script src="http://zui.sexy/dist/js/zui.min.js"></script>
+<!-- jQuery -->
+<script src="//cdnjs.cloudflare.com/ajax/libs/zui/1.7.0/lib/jquery/jquery.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/zui/1.7.0/js/zui.min.js"></script>
 <script src="http://zui.sexy/docs/js/doc.min.js"></script>
-
-<!-- 增强文档插件 -->
-<script async="" src="http://zui.sexy/dist/lib/prettify/prettify.js"></script>
-
-<!-- Statistic -->
-<!-- <div class="hide"><script src="//s95.cnzz.com/stat.php?id=1253026255&amp;web_id=1253026255"></script><script src="http://c.cnzz.com/core.php?web_id=1253026255&amp;t=z" charset="utf-8" type="text/javascript"></script><a href="http://www.cnzz.com/stat/website.php?web_id=1253026255" target="_blank" title="站长统计">站长统计</a></div> -->
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-53781622-1', 'auto');
-  ga('send', 'pageview');
-</script>
-
-
-</body></html>
+</body>
+</html>
