--- a/application/index/view/index/home.html
+++ b/application/index/view/index/home.html
@@ -17,6 +17,12 @@
   <div class="navbar navbar-inverse navbar-fixed-top" id="navbar" role="banner">
     <div class="container">
       <div class="navbar-header">
+        <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target=".zui-navbar-collapse">
+          <span class="sr-only">切换导航</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
         <a href="/" class="navbar-brand"><span class="path-zui-36"><i class="path-1"></i><i class="path-2"></i></span> <span class="brand-title">法人堂 <i data-toggle="tooltip" id="compactTogger" data-placement="bottom" class="icon icon-home" data-original-title="" title=""></i></a>
       </div>
       <nav class="collapse navbar-collapse zui-navbar-collapse">
