--- a/public/static/user.css
+++ b/public/static/user.css
@@ -109,6 +109,15 @@ a {
   margin: 0;
 }
 
+.fieldset-input:focus {
+  outline-width: 0;
+  outline-offset: -2px;
+}
+
+input:-webkit-autofill,input:-webkit-autofill:hover,input:-webkit-autofill:focus,input:-webkit-autofill:active {
+    transition-delay: 99999s;
+    transition-property: background-color, color
+}
 
 .btn-main:active,.btn-main:focus,.btn-main:hover {
  color:#fff;
