Optimize the error page and style 	new file:   application/common/templates/error.html 	modified:   application/config/dev/config.php 	modified:   application/config/product/config.php 	modified:   application/index/view/index/detail.html 	modified:   application/index/view/index/home.html 	modified:   application/index/view/partials/footer.html 	modified:   application/index/view/partials/header.html 	modified:   application/index/view/partials/user_header.html 	modified:   application/route.php 	new file:   public/static/images/e6b395.jpg 	new file:   public/static/images/steer.png

--- a/application/index/view/partials/footer.html
+++ b/application/index/view/partials/footer.html
@@ -63,11 +63,11 @@
 
               <div class="card-heading" title="">
                 <i class="icon text-icon"></i>
-                <h5><a class="name" href="/about.html">企业简介</a></h5>
+                <h5><a class="name" href="/about">企业简介</a></h5>
               </div>
               <div class="card-heading" title="">
                 <i class="icon text-icon"></i>
-                <h5><a class="name" href="/about.html">联系我们</a></h5>
+                <h5><a class="name" href="/about">联系我们</a></h5>
               </div>
           </div>
         </div>
