--- a/application/index/view/partials/header.html
+++ b/application/index/view/partials/header.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>专业的法人信息检索平台-法人堂</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <meta name="keywords" content="法人堂，法人，企业法人，工商信息查询，企业联系方式" />
   <meta name="description" content="法人堂是一个专业的企业法人信息检索平台，致力于提供简单、可靠、真实的法人信息检索查询服务。" />
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/zui/1.7.0/css/zui.min.css">
