Pagination Library 	modified:   application/common.php 	modified:   application/config/dev/config.php 	modified:   application/config/product/config.php 	modified:   application/index/controller/Index.php 	modified:   application/index/view/index/search.html 	modified:   application/index/view/partials/header.html 	modified:   application/index/view/partials/user_header.html 	deleted:    extend/.gitignore 	new file:   extend/Page.php

--- a/application/index/view/partials/header.html
+++ b/application/index/view/partials/header.html
@@ -63,9 +63,11 @@
       </div>
       <div id="search">
         <div id="searchForm">
-          <input class="form-control input-lg" id="searchInput" placeholder="企业名称、法人名称、联系方式" type="text" autocomplete="off">
+        <form action="/index/index/search" method="get">
+          <input class="form-control input-lg" id="searchInput" name="keyword" placeholder="企业名称、法人名称、联系方式" type="text" autocomplete="off">
           <i class="icon icon-search"></i>
-          <button id="searchHelpBtn" type="button" class="btn btn-link"><i class="icon icon-question"></i></button>
+          <button id="searchHelpBtn" type="submit" class="btn btn-link"><i class="icon icon-question"></i></button>
+        </form>
         </div>
       </div>
     </div>
