--- a/application/index/view/partials/user_header.html
+++ b/application/index/view/partials/user_header.html
@@ -16,8 +16,7 @@
   <body class="bare-body">
       <header class="bare-header">
         <div>
-        <img src="/images/app/Steer-logo.png" srcset="https://www.newsteer.com/images/app/Steer-logo.png 1x, /images/app/Steer-logo@2x.png 2x" alt="Steer logo">
-          <!--<img src="/favicon.ico"  width="105px" height="26px" alt="法人堂">-->
+        <img src="/static/images/steer.png" alt="法人堂">
         </div>
         <div class="small-tagline">法人堂团队</div>
       </header>
