adjustment of structure 	modified:   application/index/controller/Index.php 	new file:   application/index/model/Contact.php 	modified:   application/index/view/index/detail.html 	modified:   application/index/view/index/home.html 	modified:   application/index/view/index/search.html 	modified:   application/index/view/partials/footer.html 	modified:   application/index/view/partials/header.html 	modified:   application/index/view/partials/user_footer.html 	modified:   application/index/view/partials/user_header.html 	modified:   application/route.php 	new file:   public/static/assets/common.css 	renamed:    public/static/doc.min.css -> public/static/assets/doc.min.css 	renamed:    public/static/user.css -> public/static/assets/user.css 	new file:   public/static/js/common.js 	renamed:    public/static/doc.min.js -> public/static/js/doc.min.js 	new file:   public/static/js/jquery.js

--- a/application/index/view/index/home.html
+++ b/application/index/view/index/home.html
@@ -14,7 +14,17 @@
             <div class="pull-right"><a href="#"><i class="icon-chat"></i> 0 </a> &nbsp;&nbsp;<a href="#"><i class="icon-eye-open"></i> <?php echo 0;?> </a></div>
             <h4>
               <a href="/company/detail/<?php echo $v->hashid;?>"><?php echo $v->comname;?></a>
-              <span class="label <?php echo strpos('注销', $v->status)===false?'label-success':'label-danger';?>"><?php echo $v->status;?></span>
+              <?php if (empty($v->status)) {
+                  $label = 'label-warning';
+                  $v->status = '未知';
+              }elseif (strpos($v->status,'注销')!==false) {
+                  $label = 'label-warning';
+              }elseif (strpos($v->status,'吊销')!==false) {
+                  $label = 'label-danger';
+              }else{
+                  $label = 'label-success';
+              }?>
+              <span class="label <?php echo $label;?>"><?php echo $v->status;?></span>
             </h4>
           </div>
           <div class="item-content" style="padding-top: 5px;">
