--- a/application/index/view/partials/footer.html
+++ b/application/index/view/partials/footer.html
@@ -79,20 +79,6 @@
 <footer>
 
 </footer>
-<style type="text/css">
-  .copyright {
-    font-size: 13px;
-    text-align: center;
-    color: #555;
-    padding-top: 14px;
-    padding-bottom: 20px;
-    border-top: 1px solid #e5e5e5;
-}
-.copyright a{
-  font-weight: 400;
-  color: #353535;
-}
-</style>
 <div class="copyright">
     <div class="container">
         <div class="row">
@@ -106,8 +92,9 @@
 
 
 <!-- jQuery -->
-<script src="//cdnjs.cloudflare.com/ajax/libs/zui/1.7.0/lib/jquery/jquery.js"></script>
+<script src="/static/js/jquery.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/zui/1.7.0/js/zui.min.js"></script>
-<script src="/static/doc.min.js"></script>
+<script src="/static/js/doc.min.js"></script>
+
 </body>
 </html>
