--- a/application/index/view/partials/user_footer.html
+++ b/application/index/view/partials/user_footer.html
@@ -1,4 +1,4 @@
-<script src="//cdnjs.cloudflare.com/ajax/libs/zui/1.7.0/lib/jquery/jquery.js"></script>
+<script src="/static/js/jquery.js"></script>
     <script type="text/javascript">
           jQuery(function () {
             return $('.fieldset-input').focusin(function () {
