--- a/application/index/view/partials/user_header.html
+++ b/application/index/view/partials/user_header.html
@@ -10,7 +10,7 @@
     <title><?php echo $title;?></title>
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/zui/1.7.0/css/zui.min.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="/static/user.css">
+    <link rel="stylesheet" href="/static/assets/user.css">
   </head>
 
   <body class="bare-body">
