--- a/application/index/view/partials/header.html
+++ b/application/index/view/partials/header.html
@@ -8,7 +8,8 @@
   <meta name="keywords" content="法人堂，法人，企业法人，工商信息查询，企业联系方式" />
   <meta name="description" content="法人堂是一个专业的企业法人信息检索平台，致力于提供简单、可靠、真实的法人信息检索查询服务。" />
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/zui/1.7.0/css/zui.min.css">
-  <link href="/static/doc.min.css" rel="stylesheet">
+  <link href="/static/assets/doc.min.css" rel="stylesheet">
+  <link href="/static/assets/common.css" rel="stylesheet">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
@@ -34,26 +35,6 @@
       </nav>
     </div>
   </div>
-  <style type="text/css">
-    #search {
-        max-width: 660px;
-        padding: 25px 20px 85px;
-        margin: 0 auto;
-    }
-    .desc {
-      font-size: 17px;
-    }
-    #heading > p {
-        filter: alpha(opacity=65);
-        opacity: .95;
-        font-weight: 200;
-    }
-    #searchInput {
-      border-radius: 0;
-      text-align: center;
-      padding: 5px 16px;
-    }
-  </style>
   <div id="headContainer">
     <div class="container">
       <div id="heading">
@@ -64,9 +45,8 @@
       <div id="search">
         <div id="searchForm">
         <form action="/index/index/search" method="get">
-          <input class="form-control input-lg" id="searchInput" name="keyword" placeholder="企业名称、法人名称、联系方式" type="text" autocomplete="off">
-          <i class="icon icon-search"></i>
-          <button id="searchHelpBtn" type="submit" class="btn btn-link"><i class="icon icon-question"></i></button>
+          <input class="form-control input-lg" id="searchInput" name="keyword" value="<?php echo isset($keyword)?$keyword:'';?>" placeholder="企业名称、法人名称、联系方式" type="text" autocomplete="off">
+          <button id="searchHelpBtn" type="submit" class="btn btn-link"><i class="icon icon-search"></i></button>
         </form>
         </div>
       </div>
